# AI-Press-Review-6

./: .env.example  .gitignore  AI_Press_Review_Acronyms_Pronunciation_DB_V1_1.xlsx  AUDIT-2026-04-26.md  CNAME  HANDOFF-SCOPE.md  ai-press-review-2026-05-03-companion.html  preview-how-it-works-fr.html  preview-how-it-works.html  preview-site-fr.html  preview-site.html  preview-standalone.html  pyproject.toml  requirements.txt  tts_acronyms_increment_300plus.csv
.github/workflows/: approve-release.yml  auto-release.yml  backup-subscribers.yml  cartesia-voice-mix.yml  cloud-dry-run.yml  daily-generate.yml  dual-platform-release.yml  linkedin-post.yml  llm-bench.yml  revert-email.yml  (+10 more)
config/: extension acronymes.rtf  podcast.yaml  prompt_system.txt  prompt_system_fr.txt  prompt_weekly.txt  prompt_weekly_fr.txt  sources.yaml
docs/: about.html  feed.xsl  how-it-works.html  index.html  legal.html  podcast-feed.xml  robots.txt  sitemap.xml  social-feed.xml  subscribe.html  tts-pronunciation-prosody.md  unsubscribe.html
lucide_propagation/: README.md
scripts/: _extract_pending_script.py  _patch_newsletter_form.py  _patch_subscribe_ux.py  build_r2_endpoint.py  cartesia_voice_mix.py  clone_cartesia_voice.py  cloud_dry_run.py  fix_tts_script.py  generate_draft.py  preview_local.py  release.py  rerender_draft_tts.py  tts_voice_test.py  youtube_upload.py
seo/: README.md  SETUP.md
tests/: test_collect.py  test_generator.py  test_settings.py  test_transcript.py  test_tts.py  test_utils.py  test_validate.py
tools/: README.md  run-podcast.command  voice-clone-quality-test.md
(+166 files in other folders)
